<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.advent-of-craft</groupId>
    <artifactId>summer-holiday-notebook</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>
    <modules>
		<module>week01-code-analysis/exercise</module>
		<module>week02-object-calisthenics/exercise1</module>
		<module>week02-object-calisthenics/exercise2</module>
		<module>week03-cqs/exercise1</module>
		<module>week03-cqs/exercise2</module>
		<module>week04-tdd</module>
		<module>week05-complexity/exercise1</module>
		<module>week05-complexity/exercise2</module>
		<module>week06-legacy-code/exercise1</module>
		<module>week06-legacy-code/exercise2</module>
		<module>week07-pbt/exercise1</module>
    </modules>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit.version>5.10.0</junit.version>
        <junit.core.version>4.13.2</junit.core.version>
        <assertJ.version>3.24.2</assertJ.version>
        <maven-surefire-plugin.version>3.2.2</maven-surefire-plugin.version>
        <com.amazonaws.version>1.0.0</com.amazonaws.version>
        <com.google.code.gson.version>2.8.9</com.google.code.gson.version>
        <approvaltests.version>23.0.1</approvaltests.version>
        <vavr.version>0.10.4</vavr.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <includes>
                        <include>%regex[.*Test.*]</include>
                        <include>%regex[.*Should.*]</include>
                        <include>%regex[.*Rules.*]</include>
                    </includes>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertJ.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.core.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.amazonaws</groupId>
            <artifactId>aws-lambda-java-core</artifactId>
            <version>${com.amazonaws.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>${com.google.code.gson.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.approvaltests</groupId>
            <artifactId>approvaltests</artifactId>
            <version>${approvaltests.version}</version>
        </dependency>
        <dependency>
            <groupId>io.vavr</groupId>
            <artifactId>vavr</artifactId>
            <version>${vavr.version}</version>
        </dependency>
    </dependencies>
</project>